--- a/Intersection_Union/Linked_List/Linked_List.vcxproj.filters
+++ b/Intersection_Union/Linked_List/Linked_List.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SqList.h">
+    <ClInclude Include="LinkList.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
